# popscle

./: .gitignore  CMakeLists.txt  Dockerfile  Error.cpp  Error.h  IO.cpp  IO.h  PhredHelper.cpp  PhredHelper.h  README.md  allele.h  bam_ordered_reader.cpp  bam_ordered_reader.h  bcf_chunked_reader.cpp  bcf_chunked_reader.h  bcf_filtered_reader.cpp  bcf_filtered_reader.h  bh_tsne.cpp  bh_tsne.h  cmd_cram_demuxlet.cpp  cmd_cram_digital_pileup.cpp  cmd_cram_dsc_dump.cpp  cmd_cram_dsc_dump2pileup.cpp  cmd_cram_dsc_pileup.cpp  cmd_cram_freemux2.cpp  cmd_cram_freemuxlet.cpp  cmd_cram_gtf_util.cpp  cmd_cram_mux_pileup.cpp  cmd_cram_simuxlet.cpp  cmd_plp_find_mux_clust.cpp  cmd_plp_make_dge_matrix.cpp  cmd_sc_kallisto_count.cpp  cmd_sc_map_stamps.cpp  cmd_sc_multinom_em.cpp  cmd_sc_multinom_gibbs.cpp  commands.cpp  commands.h  config.h  cramore.cpp  cramore.h  (+32 more)
tutorials/: README_atac.md
